# semsb_wati

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
semsb_wati/: hooks.py  modules.txt  patches.txt
semsb_wati/api/: pdf_parser.py  production_planner.py  routing.py  so_creator.py  wati_client.py  webhook.py
semsb_wati/semsb_wati/doctype/factory_location_mapping/: factory_location_mapping.json  factory_location_mapping.py
semsb_wati/semsb_wati/doctype/wati_settings/: wati_settings.json  wati_settings.py
semsb_wati/semsb_wati/doctype/wati_webhook_log/: wati_webhook_log.json  wati_webhook_log.py
